bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:1: error: not found: value nagative
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {if ((a*b<0)&& !negative ||a<0&&b<0&&nagative) return true else return false
                                                                                          ^